<resources>
    <string name="app_name">Alertium Tracker</string>
    <string name="sample_text">Sample Text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="api_base_url">https://api.warframestat.us</string>

    <!--NavDrawer Categories-->
    <string name="news">News</string>
    <string name="alerts">Alerts</string>
    <string name="invasions">Invasions</string>
    <string name="syndicate_missions">Syndicate Missions</string>
    <string name="void_fissures">Void Fissures</string>
    <string name="sorties">Sorties</string>
    <string name="cetus_cycle">Cetus Time of Day</string>

    <!--Image Content Descriptions-->
    <string name="nav_header_content_desc">Navigation Drawer Header uses app\'s icon.</string>
    <string name="news_list_item_content_desc">The news image is displayed here.</string>
    <string name="alerts_reward_thumb_content_desc">This image view displays an image of the reward.</string>
    <string name="alerts_faction_thumb_content_desc">This image view displays an image of the faction.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enemy_level">Level</string>
    <string name="mission_reward">Reward:</string>

    <!--Error messages-->
    <string name="no_connection">No internet connection.</string>
    <string name="load_data_failed">Failed to load data.</string>


</resources>
