<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/primaryLightColorTransparent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/reward_thumb"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/alerts_reward_thumb_content_desc"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/mission_node_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toEndOf="@+id/reward_thumb"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_text"/>

        <TextView
            android:id="@+id/min_max_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toStartOf="@+id/faction_thumb"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mission_node_text_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_text" />

        <TextView
            android:id="@+id/mission_type_faction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toEndOf="@+id/reward_thumb"
            app:layout_constraintTop_toBottomOf="@+id/mission_node_text_view"
            tools:text="@string/sample_text" />

        <TextView
            android:id="@+id/reward_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/reward_thumb"
            app:layout_constraintTop_toBottomOf="@+id/mission_type_faction_text"
            tools:text="@string/sample_text" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reward_thumb" />

        <ImageView
            android:id="@+id/faction_thumb"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/alerts_faction_thumb_content_desc"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/alert_time_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@+id/reward_thumb"
            tools:text="@string/sample_text" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
